scrolling click on mouseIcon, and footer alignment fixed

--- a/src/components/SocialArtSection/SocialArtSection.module.scss
+++ b/src/components/SocialArtSection/SocialArtSection.module.scss
@@ -151,6 +151,10 @@
     margin-right: 1.5rem;
   }
   .mousePointer {
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    bottom: 5%;
     cursor: pointer;
   }
   @media only screen and (max-width: 1024px) {
